# colorid

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: color_benchmark.rs
examples/: base.rs
src/: hex.rs  lib.rs
