[package]
name = "colorid"
version = "0.0.1-dev.1"
license = "MIT"
description = "WIP ColorID Generator for Rust"
edition = "2021"
authors = ["RustQ"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
homepage = "https://github.com/rustq/colorid"
documentation = "https://docs.rs/colorid"
readme = "README.md"
keywords = ["colorid", "color", "id", "random"]
repository = "https://github.com/rustq/colorid.git"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3"
nanoid = "0.4.0"

[dev-dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bench]]
name = "color_benchmark"
harness = false