[package]
name = "colorid"
version = "0.0.1-dev.2"
license = "MIT"
description = "WIP ColorID Generator for Rust"
edition = "2021"
authors = ["RustQ"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "benches"]
homepage = "https://github.com/rustq/colorid"
documentation = "https://docs.rs/colorid"
readme = "README.md"
keywords = ["colorid", "color", "id", "random"]
repository = "https://github.com/rustq/colorid.git"

[dependencies]
getrandom = { version = "0.2" }

[dev-dependencies]
criterion = "0.4.0"
nanoid = "0.4.0"

[dev-dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "rng"
]

[[bench]]
name = "color_benchmark"
harness = false